syntax = "proto3";
package secwager;
option java_package = "com.secwager.proto";
import "proto/ref_data.proto";

message Order {
  string order_id = 1;
  enum OrderType {
    BUY = 0;
    SELL = 1;
    CANCEL = 2;
  }
  bool isBuy=8;
  OrderType order_type = 2;
  string isin = 3;
  uint32 price = 5;
  enum State {
    OPEN = 0;
    REJECTED = 1; // terminal state
    FILLED = 7; // terminal state
    CANCEL_REQUESTED = 8;
    CANCEL_REJECTED = 9;
    CANCELLED = 10; // terminal state
    UNKNOWN = 11;
  }
  enum RejectedReason {
    UNKNOWN_ORDER=0;
    ALREADY_CANCELLED=1;
    ALREADY_FILLED=2;

  }
  message Match {
    string order_id = 1;
    string trader_id =2;
    uint32 qty = 3;
    uint32 price=4;
  }
  State state = 10;
  RejectedReason rejected_reason = 11;
  uint32 qty_filled = 12;
  uint32 qty_on_market = 14;
  string trader_id = 15;
  repeated Match matches = 16;
  Instrument instrument=18;
}

message LastTrade {
  string isin = 1;
  uint32 price = 2;
  uint32 qty = 3;
}


message Depth {
  string  isin = 1;
  repeated uint32 bid_prices = 2;
  repeated uint32 bid_qtys = 3;
  repeated uint32 ask_prices = 4;
  repeated uint32 ask_qtys = 5;
}

message Quote {
  string  isin = 1;
  LastTrade last_trade =2;
  Depth depth = 3;
}