syntax = "proto3";
package  secwager;
option java_package = "com.secwager.orderentry";

import "proto/market.proto";

message SubmitOrderRequest{
    string auth_token =1;
    Order order =2;
}

message SubmitOrderResponse{
    bool success = 1;
    string message = 2;
}

service OrderEntry{
    rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);
}